# abstractVM

./: .gitignore  CMakeLists.txt  regexLearn.cpp
inc/: abstractVmIncs.hpp
src/: AbstactVM.cpp  AbstactVM.hpp  Calculator.cpp  Calculator.hpp  Exceptions.cpp  Exceptions.hpp  Factory.cpp  Factory.hpp  IOperand.hpp  Number.cpp  Number.hpp  Operand.cpp  Operand.hpp  Sign.cpp  Sign.hpp  SignOrNumber.hpp  VMLogic.cpp  VMLogic.hpp  main.cpp
